# EssayJoke

./: README.md
baselibrary/: CMakeLists.txt  build.gradle
baselibrary/src/androidTest/java/com/noblel/baselibrary/: ExampleInstrumentedTest.java
baselibrary/src/main/: AndroidManifest.xml
baselibrary/src/main/aidl/com/noblel/baselibrary/server/base/: BMessage.aidl  IMessageListener.aidl  IMessageManager.aidl
baselibrary/src/main/aidl/com/noblel/baselibrary/server/core/: ICompute.aidl  ICoreBinderPool.aidl
baselibrary/src/main/java/com/noblel/baselibrary/: ExceptionCrashHandler.java  SDKManager.java
baselibrary/src/main/java/com/noblel/baselibrary/adapter/: BaseRecyclerAdapter.java  BaseViewHolder.java  MultiTypeSupport.java  OnItemClickListener.java  OnItemLongClickListener.java
baselibrary/src/main/java/com/noblel/baselibrary/base/: BaseActivity.java  BaseFragment.java
baselibrary/src/main/java/com/noblel/baselibrary/common/: ExceptionCrashHandler.java  RuntimeEnv.java
baselibrary/src/main/java/com/noblel/baselibrary/database/: DB.java  DatabaseManager.java  IDatabaseEngine.java  IDatabaseManager.java  IDatabaseSession.java  IQueryBuilder.java
baselibrary/src/main/java/com/noblel/baselibrary/dc/: DCConstant.java  DataManager.java  DataObserver.java  IDataOperator.java
baselibrary/src/main/java/com/noblel/baselibrary/dc/impl/: DataCenter.java  DataCenterProxy.java  IDataBuffer.java  IDataCenterObserver.java  MEMDataBuffer.java  SPDataBuffer.java  SQLDataBuffer.java  SQLDataHelper.java
baselibrary/src/main/java/com/noblel/baselibrary/dialog/: AlertController.java  AlertDialog.java  DialogViewHelper.java
baselibrary/src/main/java/com/noblel/baselibrary/fix/: FixDexManager.java
baselibrary/src/main/java/com/noblel/baselibrary/http/: EngineCallBack.java  HttpManager.java  HttpUtil.java  HttpUtils.java  IHttpEngine.java  IHttpExecutor.java  OkHttpEngine.java
baselibrary/src/main/java/com/noblel/baselibrary/http/base/: HttpHelper.java  HttpRequest.java  IHttpCallback.java  IHttpEngine.java  INetCallback.java  RequestMethod.java
baselibrary/src/main/java/com/noblel/baselibrary/https/: HTTP.java  IHttpExecutor.java
baselibrary/src/main/java/com/noblel/baselibrary/image/: GlideImpl.java  IImageOperator.java  ImageManager.java
baselibrary/src/main/java/com/noblel/baselibrary/ioc/: CheckNet.java  OnClick.java  ViewById.java  ViewFinder.java  ViewUtils.java
baselibrary/src/main/java/com/noblel/baselibrary/log/: ExceptionCrashHandler.java  LogConstant.java  LogImpl.java  LogManager.java
baselibrary/src/main/java/com/noblel/baselibrary/navigationbar/: AbsNavigationBar.java  AbsNavigationParams.java  INavigationBar.java
baselibrary/src/main/java/com/noblel/baselibrary/permission/: PermissionFail.java  PermissionHelper.java  PermissionSuccess.java  PermissionUtils.java
baselibrary/src/main/java/com/noblel/baselibrary/utils/: AndroidUtil.java  DisplayUtil.java  FileUtil.java  HookUtil.java  ImageUtil.java  MD5Util.java  SystemStatusBarUtil.java  TimeUtil.java  ToastUtil.java  UUIDUtil.java
baselibrary/src/main/java/com/noblel/baselibrary/version/: DownLoadReceiver.java  VersionManager.java
baselibrary/src/main/java/com/noblel/baselibrary/view/: ProgressView.java
baselibrary/src/main/java/com/noblel/baselibrary/wrap/: WrapRecyclerAdapter.java  WrapRecyclerView.java
baselibrary/src/main/jni/: compress_image.cpp  compress_image.h  diffpatch.cpp  diffpatch.h
baselibrary/src/main/res/anim/: dialog_scale_anim_in.xml  dialog_scale_anim_out.xml
baselibrary/src/main/res/layout/: fragment_loading_dialog.xml  fragment_progress_dialog.xml
baselibrary/src/main/res/values/: strings.xml  styles.xml
baselibrary/src/test/java/com/noblel/baselibrary/: ExampleUnitTest.java
(+480 files in other folders)
